# AI-Data-Analyst

./: app.ipynb  pyproject.toml  sales.db  streamlit_frontend.py  test.ipynb
agents/: insight_agent.py  review_agent.py  sql_agent.py  visualisation_agent.py
database/: connection.py  create_schema.py  db_manager.py  db_schema.py  query_executer.py  schema_loader.py
graph/: workflow.py
model/: llm.py
nodes/: execute_sql.py  review_node.py  schema_loader.py  sql_creation.py  visualisation_node.py
prompts/: insight_prompt.py  reviewer_prompt.py  sql_prompt.py
states/: InsightReport.py  SQLAgentState.py  SQLReview.py  chart.py
utils/: chart_utils.py  sql_utils.py
