[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-sqlite3>=0.0.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.5",
    "pandas>=3.0.3",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
]
